tests/e2e/semantics/mutation/string_substring_no_args.error
Error: syntax error in story at line 2, column 7

2|    b = a.substring()
            ^^^^^^^^^

E0121: Multiple mutation overloads for `substring` found:
	- substring end:`int`
	- substring end:`int` start:`int`
	- substring start:`int`
but none matches.
